# bcc-nqs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/nets/: vit.py  vit_nosystem.py
examples/vmc/: cleaner.py
examples/vmc/expectation_value/: config.yaml  example.py  example_run.sh
examples/vmc/optimization/: config.yaml  example_run.sh
figures/: figures.ipynb
src/data/: __init__.py  spin.py  utils.py
src/nets/blocks/: __init__.py  patching.py  sign.py  symmetrize.py
src/nets/net/: __init__.py  base_wrapper.py  wrappers.py
src/nets/utils/: serialize.py  tree.py
src/nk_extensions/: __init__.py
src/nk_extensions/callbacks/: __init__.py  savers.py
src/nk_extensions/graph/: __init__.py  lattices.py  reciprocal_space.py  utils.py
src/nk_extensions/group/: pg_utils.py  point_groups.py  translations.py  utils.py
src/nk_extensions/operator/: __init__.py  heisenberg.py  spin.py
src/nk_extensions/optimizer/: __init__.py  optimizers.py
src/vmc/config/: args.py  processes.py
src/vmc/data/: callbacks.py  funcs.py  load.py  save.py
src/vmc/exact/: bcc.py  bcc_correlations.py  quspin_utils.py
src/vmc/expectation_value/: config.yaml  expectation_value.py  observables.py  run.py
src/vmc/optimization/: config_run.yaml  protocols.py  run.py  utils.py
src/vmc/system/: __init__.py  base.py  bcc.py  utils.py
src/vmc/utils/: serialize.py
test/nets/blocks/: test_patching.py  test_sign.py  test_symmetrize.py
test/nets/net/: test_network.py
test/nk_extensions/graph/: test_bcc.py
test/vmc/system/: test_bcc.py  utils.py
(+10 files in other folders)
